--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-color: rgb(247, 250, 252);
 }
 .main{
-    max-width: 600px;
+    min-width: 600px;
     margin: 4.5rem auto;
     box-shadow: 0px 0px  15px 0px rgb(209, 208, 208);
     border-radius: 5px;
