--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
     background-color: rgb(247, 250, 252);
 }
 .main{
-    min-width: 600px;
+    
+    max-width: 600px;
     margin: 4.5rem auto;
     box-shadow: 0px 0px  15px 0px rgb(209, 208, 208);
     border-radius: 5px;
@@ -69,4 +70,17 @@ h2{
     font-weight: 700;
     margin: 0.5rem;
 
+}
+
+@media screen and (max-width:500px) {
+    .main{
+        max-width: 450px;
+        margin: auto 1rem;
+    }
+
+    h2{
+        font-size: 1.5rem;
+    }
+
+    
 }
