--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2{
 
 @media screen and (max-width:500px) {
     .main{
-        max-width: 450px;
+        max-width:100%;
         margin: auto 1rem;
     }
 
@@ -82,5 +82,5 @@ h2{
         font-size: 1.5rem;
     }
 
-    
+
 }
