--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 body{
     background-color: rgb(247, 250, 252);
+    width: 100vw;
+    height: 100vh;
 }
 .main{
     
@@ -73,9 +75,15 @@ h2{
 }
 
 @media screen and (max-width:500px) {
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     .main{
         max-width:100%;
         margin: auto 1rem;
+        /* background-color: brown; */
     }
 
     h2{
